@@ -6,6 +6,7 @@ BUILT_SOURCES		= __init__.py
 librevelationdir	= $(pythondir)/revelation
 librevelation_PYTHON	= \
 	__init__.py \
+	config.py \
 	data.py \
 	dialog.py \
 	entry.py \
