@@ -1,4 +1,5 @@
 EXTRA_DIST= \
+	config.py \
 	datahandler.py \
 	datahandler_fpm.py \
 	datahandler_rvl.py \
@@ -6,6 +7,7 @@ EXTRA_DIST= \
 	util.py
 
 test:
+	python config.py -v
 	python datahandler.py -v
 	python datahandler_fpm.py -v
 	python datahandler_rvl.py -v
