@@ -17,7 +17,7 @@ Bugfixes:
 Code changes:
 - rewrote and cleaned up alot of code
 - improved the module APIs
-- added unittests for datahandler, entry, io and util modules
+- added unittests for config, datahandler, entry, io and util modules
 - reorganized source file tree
 - use GNU autotools for installation instead of python distutils
 - use GtkUIManager for UI generation and management
